src/objects/Contract_Domain__c.object
<CustomObject>
    <label>Contract Domain</label>
    <nameField>
        <displayFormat>CD-{000000}</displayFormat>
        <label>Contract Domain Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Domains</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>DContract__c</referenceTo>
        <relationshipLabel>Contract Domains</relationshipLabel>
        <relationshipName>Contract_Domains</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>TEXT(Contract__r.Execution_Owner_Division__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <label>Domain</label>
        <referenceTo>Domain__c</referenceTo>
        <relationshipLabel>Contract Domains</relationshipLabel>
        <relationshipName>Contract_Domains</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
</CustomObject>